<resources>
    <string name="app_name">Moove</string>
    <string name="google_sign_in_text">Sign in with Google</string>
    <string name="facebook_app_id">491999238488523</string>
    <string name="server_client_id">281918253813-mumd3ip1ssk36c1a2qt4jkp8fav5t40s.apps.googleusercontent.com</string>
    <string name="fb_login_protocol_scheme">fb491999238488523</string>
    <string name="land_page_get_started">GET STARTED</string>
    <string name="land_page_title_1">Your Personal</string>
    <string name="land_page_title_2">WORKOUT BUDDY</string>
    <string name="land_page_sign_in">SIGN IN</string>
    <string name="land_page_main_text">Get the most out of your workout routine and your diet by
        integrating our app into your lifestyle and enjoy the endless benefits of having a virtual
        coach by your side.</string>
    <string name="land_page_notice">By continuing you agree to our</string>
    <string name="land_page_terms">TOS</string>
    <string name="login_page_title">Login Page</string>
    <string name="tos_page_title">Terms of Service</string>
    <string name="login_page_title_1">Sign In</string>
    <string name="login_page_title_2">Login with your account</string>
</resources>