<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_landing_page"
        tools:context=".LandingPage">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lp_title_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_210sdp"
            android:gravity="center_horizontal"
            android:text="@string/land_page_title_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lp_title_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/land_page_title_2"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_27ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lp_title_1" />

        <View
            android:id="@+id/lp_view_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1ssp"
            android:layout_marginStart="@dimen/_115sdp"
            android:layout_marginLeft="@dimen/_115sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_115sdp"
            android:layout_marginRight="@dimen/_115sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lp_title_2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lp_main_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/_3ssp"
            android:text="@string/land_page_main_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lp_view_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lp_get_started"
            android:layout_width="0dp"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginStart="@dimen/_31sdp"
            android:layout_marginLeft="@dimen/_31sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_31sdp"
            android:layout_marginRight="@dimen/_31sdp"
            android:text="@string/land_page_get_started"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lp_main_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lp_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_63sdp"
            android:layout_marginLeft="@dimen/_63sdp"
            android:layout_marginTop="@dimen/_44sdp"
            android:gravity="center_horizontal"
            android:text="@string/land_page_notice"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lp_get_started" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lp_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_44sdp"
            android:layout_marginEnd="@dimen/_56sdp"
            android:layout_marginRight="@dimen/_56sdp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/land_page_terms"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toEndOf="@+id/lp_notice"
            app:layout_constraintTop_toBottomOf="@+id/lp_get_started" />

        <View
            android:id="@+id/lp_view_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2ssp"
            android:layout_marginStart="@dimen/_115sdp"
            android:layout_marginLeft="@dimen/_115sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_115sdp"
            android:layout_marginRight="@dimen/_115sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lp_notice"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
