<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_landing_page"
    tools:context=".LandingPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_page_title_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_135sdp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:text="@string/login_page_title_1"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_page_title_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_page_title_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:text="@string/login_page_title_2"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/google_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_page_title_1" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/google_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_51sdp"
            android:layout_marginLeft="@dimen/_51sdp"
            android:layout_marginTop="@dimen/_58sdp"
            android:layout_marginEnd="@dimen/_51sdp"
            android:layout_marginRight="@dimen/_51sdp"
            android:text="@string/google_sign_in_text"
            android:paddingTop="@dimen/_11sdp"
            android:paddingBottom="@dimen/_11sdp"
            app:layout_constraintBottom_toTopOf="@+id/facebook_login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_page_title_2" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_54sdp"
            android:layout_marginLeft="@dimen/_54sdp"
            android:paddingTop="@dimen/_11sdp"
            android:paddingBottom="@dimen/_11sdp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_54sdp"
            android:layout_marginRight="@dimen/_54sdp"
            android:layout_marginBottom="@dimen/_220sdp"
            app:layout_constraintBottom_toTopOf="@+id/land_page_view_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_login_button" />

        <View
            android:id="@+id/land_page_view_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2ssp"
            android:layout_marginStart="@dimen/_115sdp"
            android:layout_marginLeft="@dimen/_115sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_115sdp"
            android:layout_marginRight="@dimen/_115sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebook_login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
